Fixed horizontal align

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,7 +23,6 @@
 
 body {
   min-height: 100vh;
-  min-width: 100vw;
   background-color: var(--palette-white1);
 }
 
